--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
