--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "express-graphql": "^0.12.0",
     "framer-motion": "^4.1.17",
-    "graphql": "^15.5.1",
+    "graphql": "^15.5.2",
     "lodash": "^4.17.21",
+    "mongoose": "^6.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
