--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0",
     "express-graphql": "^0.12.0",
     "framer-motion": "^4.1.17",
-    "graphql": "^15.5.2",
+    "graphql": "^15.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.3",
     "react": "^17.0.2",
+    "react-click-outside-hook": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "react-spring": "^9.2.4",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
